--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "sinon": "^4.4.8"
+    "sinon": "^4.4.8",
+    "jest": "22.4"
   }
 }
