Button tests for function call

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 /node_modules
 .vscode
 yarn.lock
+
+### Vim ###
+# swap
+.sw[a-p]
+.*.sw[a-p]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
