--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "big.js": "^5.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-test-renderer": "^16.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
