--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^1.1.4",
+    "sinon": "^5.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
