--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "calculator",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-scripts": "^1.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "devDependencies": {}
+	"name": "calculator",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"react": "^16.3.2",
+		"react-dom": "^16.3.2",
+		"react-scripts": "^1.1.4",
+		"sinon": "^5.0.7"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject"
+	},
+	"devDependencies": {
+		"enzyme": "^3.3.0",
+		"enzyme-adapter-react-16": "^1.1.1",
+		"prop-types": "^15.6.1",
+		"react-test-renderer": "^16.3.2"
+	}
 }
