--- a/package.json
+++ b/package.json
@@ -13,5 +13,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jest": "^23.1.0"
+  }
 }
