--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme-adapter-react-16": "^1.1.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^1.1.4",
+    "react-test-renderer": "^16.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,6 +17,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
-    "jest": "^23.1.0"
+    "jest": "^23.1.0",
+    "sinon": "^6.0.0"
   }
 }
