--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "^1.1.4",
-    "react-test-renderer": "^16.4.1"
+    "react-test-renderer": "^16.4.1",
+    "sinon": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
