--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
-    "jest": "^23.1.0",
-    "sinon": "^6.0.0"
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^23.1.0"
   }
 }
