--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^1.1.4",
+    "react-test-renderer": "^16.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
