--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-scripts": "^1.1.4",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "prop-types": "^15.6.2"
+    "prop-types": "^15.6.2",
+    "big.js": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
