Final commit for now--some functions are not working correctly.

--- a/package.json
+++ b/package.json
@@ -17,5 +17,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "sinon": "^4.4.8"
+  }
 }
