--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+package-lock.json
 
 # testing
 /coverage
@@ -18,6 +19,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+*.swp
+*.swo
 
 npm-debug.log*
 yarn-debug.log*
