--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "^1.1.4",
-    "react-test-renderer": "^16.5.2"
+    "react-test-renderer": "^16.5.2",
+    "sinon": "^6.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
