--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "calculator",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts": "^1.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "enzyme": "^3.4.1",
-    "enzyme-adapter-react-16": "^1.2.0"
-  }
+	"name": "calculator",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"react": "^16.4.2",
+		"react-dom": "^16.4.2",
+		"react-scripts": "^1.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --env=jsdom --verbose",
+		"eject": "react-scripts eject"
+	},
+	"devDependencies": {
+		"enzyme": "^3.4.1",
+		"enzyme-adapter-react-16": "^1.2.0"
+	}
 }
