--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
   },
   "devDependencies": {
     "enzyme": "^3.4.1",
-    "enzyme-adapter-react-16": "^1.2.0",
-    "jest": "^23.6.0",
-    "react-test-renderer": "^16.5.2"
+    "enzyme-adapter-react-16": "^1.2.0"
   }
 }
