--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "enzyme": "^3.4.1",
-    "enzyme-adapter-react-16": "^1.2.0",
-    "jest-environment-jsdom": "^23.4.0",
-    "jest-environment-jsdom-global": "^1.1.0"
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0"
   }
 }
