Made 5 tests for Button Component.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "^1.1.4"
+    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "enzyme": "^3.4.1",
-    "enzyme-adapter-react-16": "^1.2.0"
+    "enzyme-adapter-react-16": "^1.2.0",
+    "react-test-renderer": "^16.6.0"
   }
 }
