--- a/package.json
+++ b/package.json
@@ -13,9 +13,21 @@
     "test": "react-scripts test --env=jsdom --verbose",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "watchPathIgnorePatterns": [
+      "<rootDir>/jest.json"
+    ]
+  },
   "devDependencies": {
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
-    "react-test-renderer": "^16.6.0"
-  }
+    "react-test-renderer": "^16.6.0",
+    "sinon": "^7.0.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
