--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "main": "index.js",
+  "repository": "https://github.com/cpoIT/React-Testing.git",
+  "author": "Kat Fries <katherynejf@gmail.com>",
+  "license": "MIT"
 }
